# ndhist

./: .gitignore  BUGS.txt  CHANGELOG.txt  CMakeLists.txt  LICENSE  README.md  TODO.txt  configure  known_bugs.txt
cmake/: add_python_module.cmake  config.cmake  find_tool.cmake  install_python_package.cmake
doc/: axes.rst  index.rst
examples/python/: axis_test.py  dashi_comparison.py  fill_1d.py  fill_1d_generic_axis.py  iadd.py  idiv.py  imul.py  indexing.py  oor_fill_2d.py  oor_pod_fill_2d.py  project.py  struct_arr.py  tuple_fill_2d.py  underflow.py
include/ndhist/: axis.hpp  dtype.hpp  error.hpp  limits.hpp  ndhist.hpp  ndtable.hpp  storage.hpp  type_support.hpp
include/ndhist/axes/: constant_bin_width_axis.hpp  generic_axis.hpp  linear_axis.hpp  log10_axis.hpp
include/ndhist/detail/: NDDataArray.hpp  axis.hpp  axis_index_iter.hpp  bin_iter_value_type_traits.hpp  bin_utils.hpp  bin_value.hpp  bytearray.hpp  constant_bin_width_axis.hpp  error.hpp  fill_wiring_model.hpp  generic_axis.hpp  limits.hpp  multi_axis_index_iter.hpp  multi_axis_iter.hpp  ndarray_storage.hpp  nddatarray.hpp  oor_fill_record_stack.hpp  oor_multi_axis_index_iter.hpp  py_arg_inspector.hpp  py_seq_inspector.hpp  utils.hpp  value_cache.hpp
include/ndhist/detail/value_transforms/: identity.hpp  log10.hpp
include/ndhist/stats/: excess.hpp  expectation.hpp  kurtosis.hpp  mean.hpp  median.hpp  moment.hpp  skewness.hpp  std.hpp  var.hpp
python/: get_install_lib.py  setup.py
python/ndhist/: __init__.py  axes.py  storage.py  utils.py
src/ndhist/: NDDataArray.cpp  ndhist.cpp  ndtable.cpp  storage.cpp
src/ndhist/detail/: bytearray.cpp  ndarray_storage.cpp  nddatarray.cpp
src/ndhist/stats/: excess.cpp  expectation.cpp  kurtosis.cpp  mean.cpp  median.cpp  moment.cpp  skewness.cpp  std.cpp  var.cpp
src/pybindings/: CMakeLists.txt  axis.cpp  error.cpp  module.cpp  ndhist.cpp  ndtable.cpp
src/pybindings/axes/: constant_bin_width_axis.cpp  generic_axis.cpp  linear_axis.cpp  log10_axis.cpp
src/pybindings/stats/: excess.cpp  expectation.cpp  kurtosis.cpp  mean.cpp  median.cpp  module.cpp  moment.cpp  skewness.cpp  std.cpp  var.cpp
test/: CMakeLists.txt  constant_bin_width_axis_test.py  nbins_test.py  ndhist_basic_slicing_test.py  ndhist_binerrors_test.py  ndhist_clear_method_test.py  ndhist_deepcopy_method_test.py  ndhist_merge_axis_bins_method_test.py  ndhist_rebin_axis_method_test.py  oor_bin_copies_test.py  project_method_test.py  run_python_test.sh.in  tuple_fill_test.py
test/ndhist/: log10_axis_test.py  structndarray_fill_test.py
